--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Shopping cart</h1>
-      <h2 class="project-tagline">A Program in Language java for the shopping cart.  </h2>
+      <h2 class="project-tagline">java语言写的简易购物车模拟 A Program in Language java for the shopping cart.  </h2>
       <a href="https://github.com/AutuanLiu/Shopping_Cart" class="btn">View on GitHub</a>
       <a href="https://github.com/AutuanLiu/Shopping_Cart/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/AutuanLiu/Shopping_Cart/tarball/master" class="btn">Download .tar.gz</a>
