--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+    <!-- 多说评论框 start -->
+	<div class="ds-thread" data-thread-key="Ticket" data-title="test" data-url="https://autuanliu.github.io/Shopping_Cart/"></div>
+<!-- 多说评论框 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"autuanliu"};
+	(function() {
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0] 
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
+	})();
+	</script>
+<!-- 多说公共JS代码 end -->
     <section class="page-header">
       <h1 class="project-name">Shopping cart</h1>
       <h2 class="project-tagline">java语言写的简易购物车模拟 A Program in Language java for the shopping cart.  </h2>
